--- a/src/styles.css
+++ b/src/styles.css
@@ -31,6 +31,23 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
 }
 
+.highlighted-square {
+  background: lightcoral;
+  border: 2px solid #00897b;
+  float: left;
+  font-size: 40px;
+  font-weight: bold;
+  line-height: 80px;
+  height: 80px;
+  margin-right: -2px;
+  margin-top: -2px;
+  padding: 0;
+  text-align: center;
+  width: 80px;
+  cursor: pointer;
+  transition: background 0.3s, box-shadow 0.3s;
+}
+
 .board-row:after {
   clear: both;
   content: '';
